services/chunker_service/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chunker-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app: chunker-service
